[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = "8.0.0"
unicode-normalization = "0.1.24"
wasm-minimal-protocol = "0.1.0"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace]
